fixed card spacing in problem 7

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -27,8 +27,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 25px;
-  font-weight: 900;
+  font-size: 20px;
+  font-weight: 400;
   padding-left: 10px;
 }
 
@@ -59,6 +59,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  padding: 50px;
+  gap: 20px;
 }
 
 ul{
